[gd_scene load_steps=4 format=2]

[ext_resource path="res://actors/enemies/aggro_manager.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="CircleShape2D" id=2]

[node name="AggroManager" type="Node2D"]
script = ExtResource( 1 )

[node name="LineOfSight" type="RayCast2D" parent="."]
enabled = true
collision_mask = 516

[node name="AggroArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AggroArea"]
shape = SubResource( 1 )

[node name="UnaggroArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="UnaggroArea"]
shape = SubResource( 2 )
